# agent_learn_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  model_init.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
deploy/: prometheus.yml  tempo.yaml
deploy/grafana/: datasources.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
legacy/project_01_rag_system/: main.py
project_01_rag_system/: main.py  model_init.py  ragchain.py
project_01_rag_system/doc/: CONFIG_REFACTORING.md  SMART_MODE_GUIDE.md
project_01_rag_system/module_01_embeddings/: embedding.py
project_01_rag_system/module_02_config/: __init__.py  config_01_rag_config.py  config_02_rag_state.py
project_01_rag_system/module_03_document/: __init__.py  document_loader.py  milvus_sotre.py
project_01_rag_system/module_04_retriever/: retriever.py
project_01_rag_system/module_05_generator/: __init__.py  generator.py  template_library.py
project_01_rag_system/temp/: deep_learning_applications.csv  django_framework.md  langchain_guide.md  neural_networks.csv
project_01_rag_system/test/: test_smart_routing.py
src/api/: app.py  dependencies.py  logging_setup.py  metrics.py  middleware.py  tracing_setup.py
src/cli/: main.py
src/core/: config.py  document_loader.py  embeddings.py  generator.py  milvus_store.py  model.py  rag_chain.py  retriever.py  session_store.py  smart_router.py  state.py  templates.py
static/: chat.html
tests/: conftest.py
tests/api/: test_query.py  test_sessions.py  (+1 more)
(+31 files in other folders)
